--- a/styles/_navbar.sass
+++ b/styles/_navbar.sass
@@ -6,7 +6,7 @@ nav
     align-items: center
     justify-content: space-between
     width: 100vw
-    height: 10vh
+    height: 7vh
     border-bottom: 1px solid lightgray
     #navbar-links
         margin-right: 100px
@@ -20,7 +20,7 @@ nav
         margin-left: 100px
         display: flex
         align-items: center
-        justify-content: center
+        justify-content: flex-start
         gap: 20px
         h1
             &:hover
