--- a/styles/_navbar.sass
+++ b/styles/_navbar.sass
@@ -1,11 +1,10 @@
 @import ./_variables
-@import ./_mixins
 
 nav
     display: flex
     align-items: center
     justify-content: space-between
-    width: 100vw
+    width: 100%
     height: 7vh
     border-bottom: 1px solid lightgray
     #navbar-links
